vox/rust/vox-macros-core/src/snapshots/vox_macros_core__tests__explicit_request_context_opt_in.snap
---
source: rust/vox-macros-core/src/lib.rs
expression: "generate(quote!\n{\n    trait Audit\n    {\n        #[vox::context] async fn record(&self, payload: String) -> &'vox str;\n        async fn ping(&self) -> u64;\n    }\n})"
---
#[allow(non_snake_case, clippy::all)]
pub fn audit_service_descriptor() -> &'static ::vox::connection::ServiceDescriptor {
    static DESCRIPTOR: std::sync::OnceLock<&'static ::vox::connection::ServiceDescriptor> =
        std::sync::OnceLock::new();
    DESCRIPTOR.get_or_init(|| {
        let methods: Vec<&'static ::vox::connection::MethodDescriptor> =
            vec![
                ::vox::hash::method_descriptor::<(String,), &'static str>(
                    "Audit",
                    "record",
                    &["payload"],
                    &[None],
                    ::vox::hash::MethodDescriptorOptions {
                        response_wire_shape: <Result<
                            &'static str,
                            ::vox::VoxError<::core::convert::Infallible>,
                        > as ::vox::facet::Facet<'static>>::SHAPE,
                        doc: None,
                    },
                ),
                ::vox::hash::method_descriptor::<(), u64>(
                    "Audit",
                    "ping",
                    &[],
                    &[],
                    ::vox::hash::MethodDescriptorOptions {
                        response_wire_shape: <Result<
                            u64,
                            ::vox::VoxError<::core::convert::Infallible>,
                        > as ::vox::facet::Facet<'static>>::SHAPE,
                        doc: None,
                    },
                ),
            ];
        Box::leak(Box::new(::vox::connection::ServiceDescriptor {
            service_name: "Audit",
            methods: Box::leak(methods.into_boxed_slice()),
            doc: None,
        }))
    })
}
pub trait Audit
where
    Self: Clone + ::vox::MaybeSend + ::vox::MaybeSync + 'static,
{
    fn record<'vox>(
        &self,
        cx: &::vox::RequestContext<'_>,
        call: impl ::vox::Call<'vox, &'vox str, ::core::convert::Infallible>,
        payload: String,
    ) -> impl std::future::Future<Output = ()> + ::vox::MaybeSend;
    fn ping(&self) -> impl std::future::Future<Output = u64> + ::vox::MaybeSend;
}
#[doc = r" Dispatcher for this service."]
#[doc = r""]
#[doc = r" Wraps a handler and implements [`#vox::Handler`] by routing incoming"]
#[doc = r" calls to the appropriate trait method by method ID."]
#[derive(Clone)]
pub struct AuditDispatcher<H> {
    handler: H,
    middlewares: Vec<::std::sync::Arc<dyn ::vox::ServerMiddleware>>,
}
impl<H> AuditDispatcher<H>
where
    H: Audit,
{
    #[doc = r" Create a new dispatcher wrapping the given handler."]
    pub fn new(handler: H) -> Self {
        Self {
            handler,
            middlewares: vec![],
        }
    }
    #[doc = r" Append a server middleware to this dispatcher."]
    pub fn with_middleware(mut self, middleware: impl ::vox::ServerMiddleware) -> Self {
        self.middlewares.push(::std::sync::Arc::new(middleware));
        self
    }
    async fn run_post_hooks(
        &self,
        context: &::vox::RequestContext<'_>,
        outcome: ::vox::ServerCallOutcome,
    ) {
        for middleware in self.middlewares.iter().rev() {
            middleware.post(context, outcome).await;
        }
    }
}
impl<H, R> ::vox::Handler<R> for AuditDispatcher<H>
where
    H: Audit,
    R: ::vox::ReplySink,
{
    fn args_have_channels(&self, method_id: ::vox::MethodId) -> bool {
        if method_id == audit_service_descriptor().methods[0usize].id {
            return audit_service_descriptor().methods[0usize].args_have_channels;
        }
        if method_id == audit_service_descriptor().methods[1usize].id {
            return audit_service_descriptor().methods[1usize].args_have_channels;
        }
        false
    }
    fn response_wire_shape(
        &self,
        method_id: ::vox::MethodId,
    ) -> Option<&'static ::vox::facet::Shape> {
        if method_id == audit_service_descriptor().methods[0usize].id {
            return Some (< Result < & 'static str , :: vox :: VoxError < :: core :: convert :: Infallible >> as :: vox :: facet :: Facet < 'static >> :: SHAPE ,) ;
        }
        if method_id == audit_service_descriptor().methods[1usize].id {
            return Some (< Result < u64 , :: vox :: VoxError < :: core :: convert :: Infallible >> as :: vox :: facet :: Facet < 'static >> :: SHAPE ,) ;
        }
        None
    }
    async fn handle(
        &self,
        call: ::vox::SelfRef<::vox::RequestCall<'static>>,
        reply: R,
        schemas: ::std::sync::Arc<::vox::SchemaRecvTracker>,
    ) {
        let request_call = call.get();
        let method_id = request_call.method_id;
        let args_bytes = match &request_call.args {
            ::vox::Payload::Encoded(bytes) => bytes,
            _ => {
                reply
                    .send_error(
                        ::vox::VoxError::<::core::convert::Infallible>::InvalidPayload(
                            "args not Encoded".into(),
                        ),
                    )
                    .await;
                return;
            }
        };
        if method_id == audit_service_descriptor().methods[0usize].id {
            let _binder_guard = reply.channel_binder().map(::vox::set_channel_binder);
            let deser_result: ::core::result::Result<(String,), _> =
                ::vox::provide_channels_for_method(
                    request_call.channels.clone(),
                    audit_service_descriptor().methods[0usize],
                    &schemas,
                    || {
                        ::vox::schema_deser::schema_deserialize_args_borrowed(
                            args_bytes, method_id, &schemas,
                        )
                    },
                );
            drop(_binder_guard);
            let args: (String,) = match deser_result {
                Ok(v) => v,
                Err(e) => {
                    reply
                        .send_typed_error::<&'static str, ::core::convert::Infallible>(
                            ::vox::VoxError::<::core::convert::Infallible>::InvalidPayload(
                                e.to_string(),
                            ),
                        )
                        .await;
                    return;
                }
            };
            let extensions = ::vox::Extensions::new();
            let context = ::vox::RequestContext::with_transport(
                audit_service_descriptor().methods[0usize],
                &request_call.metadata,
                reply.request_id(),
                reply.connection_id(),
                &extensions,
            );
            if !self.middlewares.is_empty() {
                for middleware in &self.middlewares {
                    middleware
                        .pre(::vox::ServerRequest::new(context, ::vox::Peek::new(&args)))
                        .await;
                }
            }
            let (payload,) = args;
            let (reply, outcome_handle) = ::vox::observe_reply(
                reply,
                ::vox::ServerResponseContext::new(
                    context.method(),
                    context.request_id(),
                    context.connection_id(),
                    context.extensions().clone(),
                ),
                self.middlewares.clone(),
            );
            let sink_call = ::vox::SinkCall::new(reply);
            self.handler.record(&context, sink_call, payload).await;
            if !self.middlewares.is_empty() {
                self.run_post_hooks(&context, outcome_handle.outcome())
                    .await;
            }
            return;
        }
        if method_id == audit_service_descriptor().methods[1usize].id {
            let _binder_guard = reply.channel_binder().map(::vox::set_channel_binder);
            let deser_result: ::core::result::Result<(), _> = ::vox::provide_channels_for_method(
                request_call.channels.clone(),
                audit_service_descriptor().methods[1usize],
                &schemas,
                || {
                    ::vox::schema_deser::schema_deserialize_args_borrowed(
                        args_bytes, method_id, &schemas,
                    )
                },
            );
            drop(_binder_guard);
            let args: () = match deser_result {
                Ok(v) => v,
                Err(e) => {
                    reply
                        .send_typed_error::<u64, ::core::convert::Infallible>(::vox::VoxError::<
                            ::core::convert::Infallible,
                        >::InvalidPayload(
                            e.to_string()
                        ))
                        .await;
                    return;
                }
            };
            let extensions = ::vox::Extensions::new();
            let context = ::vox::RequestContext::with_transport(
                audit_service_descriptor().methods[1usize],
                &request_call.metadata,
                reply.request_id(),
                reply.connection_id(),
                &extensions,
            );
            if !self.middlewares.is_empty() {
                for middleware in &self.middlewares {
                    middleware
                        .pre(::vox::ServerRequest::new(context, ::vox::Peek::new(&args)))
                        .await;
                }
            }
            let () = args;
            let (reply, outcome_handle) = ::vox::observe_reply(
                reply,
                ::vox::ServerResponseContext::new(
                    context.method(),
                    context.request_id(),
                    context.connection_id(),
                    context.extensions().clone(),
                ),
                self.middlewares.clone(),
            );
            let value = self.handler.ping().await;
            let sink_call = ::vox::SinkCall::new(reply);
            ::vox::Call::<'_, u64, ::core::convert::Infallible>::ok(sink_call, value).await;
            if !self.middlewares.is_empty() {
                self.run_post_hooks(&context, outcome_handle.outcome())
                    .await;
            }
            return;
        }
        reply
            .send_error(::vox::VoxError::<::core::convert::Infallible>::UnknownMethod)
            .await;
    }
}
#[doc = "Client for the `Audit` service.\n\nStores a [`Caller`](:: vox::Caller) and an optional [`ConnectionHandle`](:: vox::ConnectionHandle) as public fields."]
#[must_use = "Dropping this client does not close the connection; shut down explicitly with ConnectionHandle when needed."]
#[derive(Clone)]
pub struct AuditClient {
    #[doc = r" The underlying caller for making RPC calls."]
    pub caller: ::vox::Caller,
    #[doc = r" The connection handle backing this service lane, when available."]
    pub connection: Option<::vox::ConnectionHandle>,
}
impl AuditClient {
    #[doc = r" Create a new client wrapping the given caller."]
    pub fn new(caller: ::vox::Caller) -> Self {
        Self {
            caller: caller.with_service(audit_service_descriptor()),
            connection: None,
        }
    }
    #[doc = r" Append a client middleware to this client."]
    pub fn with_middleware(self, middleware: impl ::vox::ClientMiddleware) -> Self {
        Self {
            caller: self
                .caller
                .with_middleware(audit_service_descriptor(), middleware),
            connection: self.connection,
        }
    }
    pub async fn record(
        &self,
        payload: String,
    ) -> Result<::vox::SelfRef<&'static str>, ::vox::VoxError> {
        let method_id = audit_service_descriptor().methods[0usize].id;
        let args = (payload,);
        let mut metadata = Default::default();
        let req = ::vox::RequestCall {
            method_id,
            channels: Default::default(),
            args: ::vox::Payload::outgoing(&args),
            metadata,
            schemas: Default::default(),
        };
        let with_tracker = match self.caller.call(req).await {
            Ok(with_tracker) => with_tracker,
            Err(e) => {
                return Err(match e {
                    ::vox::VoxError::UnknownMethod => {
                        ::vox::VoxError::<::core::convert::Infallible>::UnknownMethod
                    }
                    ::vox::VoxError::InvalidPayload(msg) => {
                        ::vox::VoxError::<::core::convert::Infallible>::InvalidPayload(msg)
                    }
                    ::vox::VoxError::Cancelled => {
                        ::vox::VoxError::<::core::convert::Infallible>::Cancelled
                    }
                    ::vox::VoxError::ConnectionClosed => {
                        ::vox::VoxError::<::core::convert::Infallible>::ConnectionClosed
                    }
                    ::vox::VoxError::SessionShutdown => {
                        ::vox::VoxError::<::core::convert::Infallible>::SessionShutdown
                    }
                    ::vox::VoxError::SendFailed => {
                        ::vox::VoxError::<::core::convert::Infallible>::SendFailed
                    }
                    ::vox::VoxError::Indeterminate => {
                        ::vox::VoxError::<::core::convert::Infallible>::Indeterminate
                    }
                    ::vox::VoxError::User(never) => match *never {},
                });
            }
        };
        let ::vox::WithTracker {
            value: response,
            tracker: schema_tracker,
            fds: __vox_frame_fds,
        } = with_tracker;
        ::vox::provide_fds(__vox_frame_fds, move || {
            response.try_repack(|resp, _bytes| {
                let ret_bytes = match &resp.ret {
                    ::vox::Payload::Encoded(bytes) => bytes,
                    _ => {
                        return Err(
                            ::vox::VoxError::<::core::convert::Infallible>::InvalidPayload(
                                "response not Encoded".into(),
                            ),
                        );
                    }
                };
                let result: Result<&'static str, ::vox::VoxError<::core::convert::Infallible>> =
                    ::vox::schema_deser::schema_deserialize_response_borrowed::<
                        Result<&'static str, ::vox::VoxError<::core::convert::Infallible>>,
                    >(ret_bytes, method_id, &schema_tracker)
                    .map_err(|e| {
                        ::vox::VoxError::<::core::convert::Infallible>::InvalidPayload(
                            e.to_string(),
                        )
                    })?;
                match result {
                    Ok(ret) => Ok(ret),
                    Err(err) => Err(err),
                }
            })
        })
    }
    pub async fn ping(&self) -> Result<u64, ::vox::VoxError> {
        let method_id = audit_service_descriptor().methods[1usize].id;
        let args = ();
        let mut metadata = Default::default();
        let req = ::vox::RequestCall {
            method_id,
            channels: Default::default(),
            args: ::vox::Payload::outgoing(&args),
            metadata,
            schemas: Default::default(),
        };
        let with_tracker = match self.caller.call(req).await {
            Ok(with_tracker) => with_tracker,
            Err(e) => {
                return Err(match e {
                    ::vox::VoxError::UnknownMethod => {
                        ::vox::VoxError::<::core::convert::Infallible>::UnknownMethod
                    }
                    ::vox::VoxError::InvalidPayload(msg) => {
                        ::vox::VoxError::<::core::convert::Infallible>::InvalidPayload(msg)
                    }
                    ::vox::VoxError::Cancelled => {
                        ::vox::VoxError::<::core::convert::Infallible>::Cancelled
                    }
                    ::vox::VoxError::ConnectionClosed => {
                        ::vox::VoxError::<::core::convert::Infallible>::ConnectionClosed
                    }
                    ::vox::VoxError::SessionShutdown => {
                        ::vox::VoxError::<::core::convert::Infallible>::SessionShutdown
                    }
                    ::vox::VoxError::SendFailed => {
                        ::vox::VoxError::<::core::convert::Infallible>::SendFailed
                    }
                    ::vox::VoxError::Indeterminate => {
                        ::vox::VoxError::<::core::convert::Infallible>::Indeterminate
                    }
                    ::vox::VoxError::User(never) => match *never {},
                });
            }
        };
        let ::vox::WithTracker {
            value: response,
            tracker: schema_tracker,
            fds: __vox_frame_fds,
        } = with_tracker;
        ::vox::provide_fds(__vox_frame_fds, move || {
            let response = response.get();
            let ret_bytes = match &response.ret {
                ::vox::Payload::Encoded(bytes) => bytes,
                _ => {
                    return Err(
                        ::vox::VoxError::<::core::convert::Infallible>::InvalidPayload(
                            "response not Encoded".into(),
                        ),
                    );
                }
            };
            let result: Result<u64, ::vox::VoxError<::core::convert::Infallible>> =
                ::vox::schema_deser::schema_deserialize_response::<
                    Result<u64, ::vox::VoxError<::core::convert::Infallible>>,
                >(ret_bytes, method_id, &schema_tracker)
                .map_err(|e| {
                    ::vox::VoxError::<::core::convert::Infallible>::InvalidPayload(e.to_string())
                })?;
            match result {
                Ok(ret) => Ok(ret),
                Err(err) => Err(err),
            }
        })
    }
}
impl ::vox::FromVoxLane for AuditClient {
    const SERVICE_NAME: &'static str = "Audit";
    fn from_vox_lane(caller: ::vox::Caller, connection: Option<::vox::ConnectionHandle>) -> Self {
        Self {
            caller: caller.with_service(audit_service_descriptor()),
            connection,
        }
    }
}
